Refactor HTML structure and enhance CSS styles for improved layout and responsiveness

--- a/css_basics/index.html
+++ b/css_basics/index.html
@@ -10,6 +10,7 @@
 
   <body class="works_on_smartphone">
     <header>
+      
       <h1>My First Portfolio</h1>
       <nav>
         <ul>
@@ -27,8 +28,9 @@
         <p>of course after I build them</p>
         <h1>This is Home</h1>
         <h2>About Me</h2>
+        <p>Under construction</p>
         <h3>Soon to come</h3>
-        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
+        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Notify Me</a>
         <table>
           <thead>
             <tr>
