--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -64,14 +64,16 @@
       <main>
         <section class="quote">
           <div>
-            <img src="./images/Bitmap.png" alt="image" />
+            <img src="./images/5.png" alt="image" />
           </div>
           <div>
             <blockquote>
               « Those tutorials are concise and go straight to the point. I
-              can’t think of a better place to learn smiling. And it’s so fun!
+              can’t think of a better
+              <br>
+              place to learn smiling. And it’s so fun!
             </blockquote>
-            <h3>NAME</h3>
+            <h3>Magua William</h3>
             <p>weather presenter</p>
           </div>
         </section>
